; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_server.c_enable_tunnel_reverse.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_server.c_enable_tunnel_reverse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOCKET_NAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"adb reverse\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @enable_tunnel_reverse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enable_tunnel_reverse(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @SOCKET_NAME, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @adb_reverse(i8* %6, i32 %7, i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @process_check_success(i32 %10, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  ret i32 %11
}

declare dso_local i32 @adb_reverse(i8*, i32, i32) #1

declare dso_local i32 @process_check_success(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
